--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
            Nora bint Abdulrahman University. It has been designated as a
            Beta World City.</p>
 
-        <img src="camels-in-truck.jpg" alt="The roads of Riyadh">
+        <img src="./images/transportation/camels-in-truck.jpg" alt="The roads of Riyadh">
         <h3>Sources</h3>
         <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</a>
         <a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
